--- a/sub-html/index.html
+++ b/sub-html/index.html
@@ -10,11 +10,32 @@
     <script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/3.4.1/js/bootstrap.min.js"></script>
   </head>
   <body>
-    <h1>Sub-HTML</h1>
-    <h2>用户信息: <span id="user-info"></span></h2>
-    <button type="button" class="btn btn-primary" id="change-user-info">点击变更用户信息</button>
-    <button type="button" class="btn btn-primary" id="go-to-about-page">点击跳转到About页面</button>
-    <div id="purehtml-container" style="text-align: center"></div>
+    <h1>Sub-HTML应用</h1>
+    <div class="panel panel-default" style="width: 90%; margin: 0 auto; margin-top: 20px">
+      <div class="panel-heading">技术栈</div>
+      <div class="panel-body">
+        <p>前端底层框架：JQuery[3.5.1]</p>
+        <p>前端UI框架：Bootstrap[3.4.1]</p>
+      </div>
+    </div>
+    <div class="panel panel-default" style="width: 90%; margin: 0 auto; margin-top: 20px">
+      <div class="panel-heading">测试数据</div>
+      <div class="panel-body">
+        <p>
+          测试数据通信：
+          <span>当前模块获取数据：<span id="user-info"></span></span>
+          <button type="button" class="btn btn-primary" id="change-user-info">变更数据</button>
+        </p>
+        <p>
+          测试当前应用路由管理：
+          <button type="button" class="btn btn-primary" id="go-to-about-page">点击跳转到about页面</button>
+        </p>
+        <p>
+          测试子应用互相跳转：
+          <button type="button" class="btn btn-primary" id="go-to-angular-app">点击跳转到sub-angular应用</button>
+        </p>
+      </div>
+    </div>
     <script src="./entry.js" entry></script>
   </body>
 </html>
