fix: 调整html应用和jsp应用

--- a/sub-html/about.html
+++ b/sub-html/about.html
@@ -10,6 +10,6 @@
   </head>
   <body>
     <h1>About页面</h1>
-    <script src="./entry.js" entry></script>
+    <script src="../sub-html/entry.js" entry></script>
   </body>
 </html>
