--- a/sub-html/index.html
+++ b/sub-html/index.html
@@ -36,6 +36,6 @@
         </p>
       </div>
     </div>
-    <script src="./entry.js" entry></script>
+    <script src=../sub-html/entry.js" entry></script>
   </body>
 </html>
