fix: 修改About页面以作区分

--- a/sub-html/about.html
+++ b/sub-html/about.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/3.4.1/js/bootstrap.min.js"></script>
   </head>
   <body>
-    <h1>About页面</h1>
+    <h1>This is a <span style="font-size: 28px">html-app-about</span> page!</h1>
     <script src="../sub-html/entry.js" entry></script>
   </body>
 </html>
